@@ -65,7 +65,7 @@ dt {
 </tr>
 <tr>
 <td><a href="#shoutcastPassword">shoutcastPassword</a></td>
-<td>&nbsp;</td>
+<td><a href="#vote_allow_cointoss">vote_allow_cointoss</a></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
@@ -1890,6 +1890,7 @@ Default is &quot;&quot;
 <a name="vote_allow_poll"></a>
 <a name="vote_allow_maprestart"></a>
 <a name="vote_allow_shufflenorestart"></a>
+<a name="vote_allow_cointoss"></a>
 <a name="vote_allow_putspec"></a>
 <dt>
 vote_allow_surrender [1|0]<br>
@@ -1898,6 +1899,7 @@ vote_allow_restartcampaign [1|0]<br>
 vote_allow_poll [1|0]<br>
 vote_allow_maprestart [1|0]<br>
 vote_allow_shufflenorestart [1|0]<br>
+vote_allow_cointoss [1|0]<br>
 vote_allow_putspec [1|0]
 <dd>
 (allow players to vote other player into spec)
